fixes for token issues